--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,15 +4,15 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [master, automate-quality-analysis]
   pull_request:
-    branches: [ master ]
+    branches: [master, automate-quality-analysis]
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  build_test:
     name: building, testing and quality analysis
     runs-on: ubuntu-latest
 
@@ -55,20 +55,20 @@ jobs:
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
-        
+
 #    - name: Commit and push the svg badges and the json coverage summary (if it changed)
 #      uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5 # v9.1.4
 #      with:
 #        default_author: github_actions
 #        message: 'commit coverage badge and summary'
 #        add: '*.svg *.json'
-#        
+#
 #    - name: Upload JaCoCo coverage report
 #      uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
 #      with:
 #        name: jacoco-report
 #        path: target/site/jacoco/
-#        
+#
 #    - name: Comment on PR with coverage percentages
 #      if: ${{ github.event_name == 'pull_request' }}
 #      run: |
