--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
         <cucumber.version>7.20.1</cucumber.version>
         <jacoco.version>0.8.12</jacoco.version>
         <javadoc.version>3.11.2</javadoc.version>
-        <sonar.organization>tommens</sonar.organization>
+        <sonar.projectKey>ClementAllard_calculator-cucumber-2025-group-5</sonar.projectKey>
+        <sonar.organization>calculator-cucumber-group-5</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -146,6 +147,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
             </plugin>
         </plugins>
     </build>
