--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -12,9 +12,7 @@ jobs:
         uses: octokit/request-action@v2.x
         id: check_build
         with:
-          route: GET /repos/{owner}/{repo}/actions/workflows/maven.yml/runs
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.event.repository.name }}
+          route: GET /repos/ClementAllard/calculator-cucumber-2025-group-5/actions/workflows/maven.yml/runs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -22,9 +20,7 @@ jobs:
         uses: octokit/request-action@v2.x
         id: check_quality
         with:
-          route: GET /repos/{owner}/{repo}/actions/workflows/coverage-quality-analysis.yml/runs
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.event.repository.name }}
+          route: GET /repos/ClementAllard/calculator-cucumber-2025-group-5/actions/workflows/coverage-quality-analysis.yml/runs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
