--- a/.github/workflows/coverage-quality-analysis.yml
+++ b/.github/workflows/coverage-quality-analysis.yml
@@ -3,19 +3,23 @@ on:
   workflow_run:
     workflows: ["Java CI with Maven"]
     types:
-      - completed
+      - completed # Runs after the worflow Java CI with Maven regardless of success or fail.
 
 permissions:
-  contents: read
+  checks: write
+  contents: write
 
 jobs:
   coverage_and_quality:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} # Runs only on Java CI with Maven success
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.workflow_run.head_repository.full_name }}
+          ref: ${{ github.event.workflow_run.head_branch }} # Pulls the commit associated with the triggering workflow
 
       - name: Set up JDK 23
         uses: actions/setup-java@v4
