--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,9 +7,7 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-
-permissions:
-  contents: read
+  workflow_dispatch:
 
 jobs:
   build_test:
@@ -42,6 +40,15 @@ jobs:
       name: Publish Test Report
       if: ${{ always() }}
       uses: scacap/action-surefire-report@a2911bd1a4412ec18dde2d93b1758b3e56d2a880 # v1.8.0
+
+    - id: uploadreport
+      name: Upload Test Reports as Artifacts
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: surefire-reports
+        path: target/surefire-reports
+        retention-days: 7
       
     - name: Generate JaCoCo Badge
       id: jacoco
