feat(parser) : Update pom.xml for jacoco ignore autogenerated antrl4 class

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
                 <configuration>
                     <excludes>
                         <exclude>calculator/Main.class</exclude>
+                        <exclude>**/helper/antlr4/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
