--- a/.github/workflows/coverage-quality-analysis.yml
+++ b/.github/workflows/coverage-quality-analysis.yml
@@ -20,11 +20,12 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: Checkout repository
+      - name: Checkout repository with full history
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           repository: ${{ github.event.workflow_run.head_repository.full_name }}
           ref: ${{ github.event.workflow_run.head_branch }} # Pulls the commit associated with the triggering workflow
+          fetch-depth: 0  # Fetch the entire history
 
       - name: Set up JDK 23
         uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4.7.0
