Update pom.xml to exclude CLI.class

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
                 </executions>
                 <configuration>
                     <excludes>
+                        <exclude>calculator/CLI.class</exclude>
                         <exclude>**/helper/antlr4/**</exclude>
                     </excludes>
                 </configuration>
