--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                 </executions>
                 <configuration>
                     <excludes>
-                        <exclude>calculator/CLI.class</exclude>
+                        <exclude>**/calculator/CLITest.class</exclude>
                         <exclude>**/helper/antlr4/**</exclude>
                     </excludes>
                 </configuration>
