--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
         
     - id: mvn
       name: Build with Maven (including running all tests)
-      run: mvn -B package --file pom.xml
+      run: xvfb-run mvn -B package --file pom.xml
       
     - id: testreport
       name: Publish Test Report
