Add: parsing tests for random and constants.

--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,4 @@
 #Stored constants
-#Wed May 14 17:18:25 CEST 2025
+#Wed May 14 18:17:19 CEST 2025
 bug=$bug$
-test=log(2, 2^12) - 12
+test=sqrt($test$)
