Update pomxl to ignore the launch class of frontend, and empty exception class

--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,9 @@
                 <configuration>
                     <excludes>
                         <exclude>**/helper/antlr4/**</exclude>
-                        <exclude>**/frontend/desktop/**</exclude>
+                        <exclude>**/helper/IllegalSyntax</exclude>
+                        <exclude>**/calculator/IllegalConstruction</exclude>
+                        <exclude>**/frontend/desktop/DesktopInterface</exclude>
                     </excludes>
                 </configuration>
             </plugin>
