--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,4 @@
 #Stored constants
-#Thu May 15 13:05:47 CEST 2025
+#Thu May 15 14:02:00 CEST 2025
 bug=$bug$
-test=log(2, 2^12) - 12
+test=sqrt($test$)
