--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,4 @@
 #Stored constants
-#Thu May 15 15:06:30 CEST 2025
+#Thu May 15 16:04:16 CEST 2025
 bug=$bug$
-test=sqrt($test$)
+test=log(2, 2^12) - 12
