--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,4 @@
 #Stored constants
-#Thu May 15 16:04:16 CEST 2025
+#Thu May 15 17:57:33 CEST 2025
 bug=$bug$
-test=log(2, 2^12) - 12
+test=sqrt($test$)
