--- a/constants.properties
+++ b/constants.properties
@@ -1,4 +1,9 @@
 #Stored constants
-#Thu May 15 17:57:33 CEST 2025
+#Thu May 15 22:21:19 CEST 2025
 bug=$bug$
+com=5+1i
+fcom=5+0i
+int=5
+rat=10/4
+real=5.5
 test=sqrt($test$)
