--- a/constants.properties
+++ b/constants.properties
@@ -1,9 +1,9 @@
 #Stored constants
-#Fri May 16 00:17:06 CEST 2025
+#Fri May 16 00:41:39 CEST 2025
 bug=$bug$
 com=5+1i
 fcom=5+0i
 int=5
 rat=10/4
 real=5.5
-test=sqrt($test$)
+test=log(2, 2^12) - 12
