--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -58,7 +58,8 @@ jobs:
       - name: Run Quality Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.projectKey=ClementAllard_calculator-cucumber-2025-group-5 -Dsonar.organization=calculator-cucumber-group-5
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+        run: mvn sonar:sonar -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} -Dsonar.organization=calculator-cucumber-group-5
 
       - name: Package Report
         run: |
