Testing permissions changes

--- a/.github/workflows/coverage-quality-analysis.yml
+++ b/.github/workflows/coverage-quality-analysis.yml
@@ -5,11 +5,15 @@ on:
 
 permissions:
   checks: write
-  contents: write
+  contents: read
 
 jobs:
   coverage_and_quality:
     runs-on: ubuntu-latest
+
+    permissions:
+      checks: write
+      contents: write
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
