--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -67,7 +67,7 @@ jobs:
           cp -r target/surefire-reports reports/surefire-reports
           cp -r target/site/apidocs reports/javadoc
           cp -r target/site/jacoco reports/coverage
-          cp -r target/sonar reports/quality
+          cp -r target/site/sonar reports/quality
           zip -r report.zip reports
 
       - name: Attach Report to Release
